Fix issue where map was overflowing space between header and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Montserrat';
     padding:0;
     margin:0;
-    overflow-y: hidden;
+    min-height: 100vh;
 }
 
 /* colour styles */
@@ -338,6 +338,9 @@ footer p {
  @media(min-width: 768px) {
      body{
          height: 100vh;
+         width: 100vw;
+         position: absolute;
+         top:0;
          overflow: hidden;
      }
 
@@ -386,15 +389,18 @@ footer p {
 
     div#map {
         top: 0;
+        position: relative;
         width: 50vw;
-        height: 100%;
+        max-height: 100%;
+        min-height:100%;
+        height: 1000px;
     }
 
     section.map-section {
-        margin: 0;
+        padding:6rem 0rem 5rem 0rem;
         top:0;
-        padding-bottom:0rem;
-        height:100vh;
+        height:100%;
+        max-height:100%;
     }
 
     div.search-box {
